c_prototypes.h

void koota_bxor_complex8(void * invec, void * inoutvec, size_t len);
void koota_land_complex8(void * invec, void * inoutvec, size_t len);
void koota_lor_complex8(void * invec, void * inoutvec, size_t len);
void koota_lxor_complex8(void * invec, void * inoutvec, size_t len);
void koota_min_complex10(void * invec, void * inoutvec, size_t len);
void koota_max_complex10(void * invec, void * inoutvec, size_t len);
void koota_sum_complex10(void * invec, void * inoutvec, size_t len);
void koota_prod_complex10(void * invec, void * inoutvec, size_t len);
void koota_band_complex10(void * invec, void * inoutvec, size_t len);
void koota_bor_complex10(void * invec, void * inoutvec, size_t len);
void koota_bxor_complex10(void * invec, void * inoutvec, size_t len);
void koota_land_complex10(void * invec, void * inoutvec, size_t len);
void koota_lor_complex10(void * invec, void * inoutvec, size_t len);
void koota_lxor_complex10(void * invec, void * inoutvec, size_t len);
void koota_min_complex16(void * invec, void * inoutvec, size_t len);
void koota_max_complex16(void * invec, void * inoutvec, size_t len);
void koota_sum_complex16(void * invec, void * inoutvec, size_t len);
void koota_prod_complex16(void * invec, void * inoutvec, size_t len);